--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body{
   color:#5a1a2c;
 }
 
-/* canvas */
+/* 🌸 Canvas petals */
 #sakura{
   position:fixed;
   inset:0;
@@ -32,11 +32,11 @@ body{
   z-index:0;
 }
 
-/* card */
+/* 💖 Card */
 .container{
   position:relative;
   z-index:2;
-  background:rgba(255,255,255,0.65);
+  background:rgba(255,255,255,0.7);
   padding:32px 26px;
   border-radius:28px;
   backdrop-filter:blur(10px);
@@ -46,7 +46,7 @@ body{
   text-align:center;
 }
 
-/* heading */
+/* ✨ Heading */
 h1{
   font-family:'Playfair Display',serif;
   font-size:clamp(2rem,6vw,2.5rem);
@@ -62,7 +62,7 @@ h1{
   45%{transform:scale(1.05)}
 }
 
-/* buttons */
+/* 💘 Buttons */
 .buttons-area{
   position:relative;
   width:100%;
@@ -99,7 +99,7 @@ button{
   transition:left .15s ease, top .15s ease;
 }
 
-/* letter */
+/* ✍️ Love letter */
 .love-letter{
   font-family:'Sacramento',cursive;
   font-size:1.7rem;
@@ -107,6 +107,20 @@ button{
   margin-top:20px;
   white-space:pre-line;
   color:#5a1a2c;
+}
+
+/* ✨ Cursor sparkles */
+.sparkle{
+  position:fixed;
+  pointer-events:none;
+  font-size:12px;
+  z-index:5;
+  animation:sparkleFade 1s ease-out forwards;
+}
+
+@keyframes sparkleFade{
+  from{opacity:1;transform:scale(1)}
+  to{opacity:0;transform:scale(2)}
 }
 </style>
 </head>
@@ -129,7 +143,7 @@ button{
 
 <script>
 /* ===============================
-   NO BUTTON LOGIC
+   🏃 NO BUTTON
 ================================ */
 const noBtn=document.getElementById("no");
 const area=document.getElementById("area");
@@ -146,7 +160,7 @@ function moveNo(){
 });
 
 /* ===============================
-   YES CLICK
+   💖 YES CLICK
 ================================ */
 yesBtn.onclick=()=>{
   navigator.vibrate?.([120,80,120]);
@@ -174,38 +188,37 @@ so beautifully magical. 🌸💖`;
   },55);
 };
 
-/* ==================================================
-   🌸 EXACT SAKURA CODE (from CodePen)
-   Author: gonzo_e
-================================================== */
-var canvas = document.getElementById("sakura");
-var ctx = canvas.getContext("2d");
-
-var sakuraList = [];
-var sakuraNum = 40;
+/* ===============================
+   🌸 EXACT CODEPEN SAKURA
+   (gonzo_e)
+================================ */
+var canvas=document.getElementById("sakura");
+var ctx=canvas.getContext("2d");
+var sakuraList=[];
+var sakuraNum=40;
 
 function resize(){
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+  canvas.width=innerWidth;
+  canvas.height=innerHeight;
 }
-window.addEventListener("resize", resize);
+addEventListener("resize",resize);
 resize();
 
 function Sakura(){
-  this.x = Math.random()*canvas.width;
-  this.y = Math.random()*canvas.height;
-  this.s = Math.random()*1 + 0.5;
-  this.r = Math.random()*Math.PI*2;
-  this.sy = Math.random()*1 + 0.5;
-  this.sx = Math.random()*0.6 - 0.3;
+  this.x=Math.random()*canvas.width;
+  this.y=Math.random()*canvas.height;
+  this.s=Math.random()*1+0.5;
+  this.r=Math.random()*Math.PI*2;
+  this.sy=Math.random()*1+0.5;
+  this.sx=Math.random()*0.6-0.3;
 }
 
-Sakura.prototype.draw = function(){
+Sakura.prototype.draw=function(){
   ctx.save();
   ctx.translate(this.x,this.y);
   ctx.rotate(this.r);
   ctx.scale(this.s,this.s);
-  ctx.fillStyle = "rgba(255,183,197,0.9)";
+  ctx.fillStyle="rgba(255,183,197,0.9)";
   ctx.beginPath();
   ctx.moveTo(0,0);
   ctx.bezierCurveTo(10,-10,20,10,0,20);
@@ -214,29 +227,47 @@ Sakura.prototype.draw = function(){
   ctx.restore();
 };
 
-Sakura.prototype.update = function(){
-  this.y += this.sy;
-  this.x += this.sx;
-  this.r += 0.01;
-  if(this.y > canvas.height){
-    this.y = -20;
-    this.x = Math.random()*canvas.width;
+Sakura.prototype.update=function(){
+  this.y+=this.sy;
+  this.x+=this.sx;
+  this.r+=0.01;
+  if(this.y>canvas.height){
+    this.y=-20;
+    this.x=Math.random()*canvas.width;
   }
 };
 
-for(var i=0;i<sakuraNum;i++){
+for(let i=0;i<sakuraNum;i++){
   sakuraList.push(new Sakura());
 }
 
 function loop(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  for(var i=0;i<sakuraList.length;i++){
-    sakuraList[i].update();
-    sakuraList[i].draw();
-  }
+  sakuraList.forEach(s=>{s.update();s.draw();});
   requestAnimationFrame(loop);
 }
 loop();
+
+/* ===============================
+   ✨ CURSOR SPARKLES
+================================ */
+function sparkle(x,y){
+  const s=document.createElement("div");
+  s.className="sparkle";
+  s.textContent="✨";
+  s.style.left=x+"px";
+  s.style.top=y+"px";
+  document.body.appendChild(s);
+  setTimeout(()=>s.remove(),1000);
+}
+
+document.addEventListener("mousemove",e=>{
+  sparkle(e.clientX,e.clientY);
+});
+
+document.addEventListener("touchstart",e=>{
+  sparkle(e.touches[0].clientX,e.touches[0].clientY);
+});
 </script>
 
 </body>
