--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ body{
   color:#5a1a2c;
 }
 
-/* 🌸 Canvas petals */
-#sakura{
+/* 🌹 Canvas petals */
+#petalCanvas{
   position:fixed;
   inset:0;
   pointer-events:none;
@@ -46,7 +46,7 @@ body{
   text-align:center;
 }
 
-/* ✨ Heading */
+/* Heading */
 h1{
   font-family:'Playfair Display',serif;
   font-size:clamp(2rem,6vw,2.5rem);
@@ -62,7 +62,7 @@ h1{
   45%{transform:scale(1.05)}
 }
 
-/* 💘 Buttons */
+/* Buttons */
 .buttons-area{
   position:relative;
   width:100%;
@@ -88,6 +88,7 @@ button{
   left:12%;
   top:50%;
   transform:translateY(-50%);
+  z-index:3;
 }
 
 #no{
@@ -96,10 +97,11 @@ button{
   left:58%;
   top:50%;
   transform:translateY(-50%);
-  transition:left .15s ease, top .15s ease;
+  transition:left .12s ease, top .12s ease;
+  z-index:2;
 }
 
-/* ✍️ Love letter */
+/* Love letter */
 .love-letter{
   font-family:'Sacramento',cursive;
   font-size:1.7rem;
@@ -109,7 +111,7 @@ button{
   color:#5a1a2c;
 }
 
-/* ✨ Cursor sparkles */
+/* Sparkles */
 .sparkle{
   position:fixed;
   pointer-events:none;
@@ -127,7 +129,7 @@ button{
 
 <body>
 
-<canvas id="sakura"></canvas>
+<canvas id="petalCanvas"></canvas>
 
 <div class="container" id="card">
   <h1>
@@ -143,34 +145,64 @@ button{
 
 <script>
 /* ===============================
-   🏃 NO BUTTON
+   🏃 PSYCHIC NO BUTTON (SAFE)
 ================================ */
-const noBtn=document.getElementById("no");
-const area=document.getElementById("area");
-const yesBtn=document.getElementById("yes");
+const noBtn  = document.getElementById("no");
+const yesBtn = document.getElementById("yes");
+const area   = document.getElementById("area");
+
+const SAFE_DISTANCE = 80;
+const MAX_TRIES = 20;
+
+function intersects(r1, r2){
+  return !(
+    r1.right < r2.left ||
+    r1.left  > r2.right ||
+    r1.bottom < r2.top ||
+    r1.top > r2.bottom
+  );
+}
 
 function moveNo(){
-  const a=area.getBoundingClientRect();
-  const b=noBtn.getBoundingClientRect();
-  noBtn.style.left=Math.random()*(a.width-b.width)+"px";
-  noBtn.style.top=Math.random()*(a.height-b.height)+"px";
+  const areaRect = area.getBoundingClientRect();
+  const noRect   = noBtn.getBoundingClientRect();
+  const yesRect  = yesBtn.getBoundingClientRect();
+
+  for(let i=0;i<MAX_TRIES;i++){
+    const x = Math.random() * (areaRect.width - noRect.width);
+    const y = Math.random() * (areaRect.height - noRect.height);
+
+    noBtn.style.left = x + "px";
+    noBtn.style.top  = y + "px";
+
+    const newNoRect = noBtn.getBoundingClientRect();
+    if(!intersects(newNoRect, yesRect)) return;
+  }
 }
-["mouseover","mousedown","touchstart"].forEach(e=>{
-  noBtn.addEventListener(e,moveNo);
+
+/* Run BEFORE cursor reaches */
+document.addEventListener("mousemove", e=>{
+  const r = noBtn.getBoundingClientRect();
+  const cx = r.left + r.width/2;
+  const cy = r.top  + r.height/2;
+  const d  = Math.hypot(e.clientX-cx, e.clientY-cy);
+  if(d < SAFE_DISTANCE) moveNo();
 });
+
+area.addEventListener("touchstart", moveNo);
 
 /* ===============================
    💖 YES CLICK
 ================================ */
-yesBtn.onclick=()=>{
+yesBtn.onclick = ()=>{
   navigator.vibrate?.([120,80,120]);
 
-  document.getElementById("card").innerHTML=`
+  document.getElementById("card").innerHTML = `
     <h1>Yaaay! 🥰💖</h1>
     <div class="love-letter" id="letter"></div>
   `;
 
-  const text=`Tanushree,
+  const text = `Tanushree,
 
 From this moment,
 every heartbeat of mine
@@ -189,64 +221,61 @@ so beautifully magical. 🌸💖`;
 };
 
 /* ===============================
-   🌸 EXACT CODEPEN SAKURA
-   (gonzo_e)
+   🌹 IMAGE PETALS
 ================================ */
-var canvas=document.getElementById("sakura");
-var ctx=canvas.getContext("2d");
-var sakuraList=[];
-var sakuraNum=40;
+const canvas = document.getElementById("petalCanvas");
+const ctx = canvas.getContext("2d");
+const petalImg = new Image();
+petalImg.src = "https://i.ibb.co/V3JPm3D/rose.png";
+
+let petals = [];
+const PETAL_COUNT = 40;
 
 function resize(){
-  canvas.width=innerWidth;
-  canvas.height=innerHeight;
+  canvas.width = innerWidth;
+  canvas.height = innerHeight;
 }
-addEventListener("resize",resize);
+addEventListener("resize", resize);
 resize();
 
-function Sakura(){
-  this.x=Math.random()*canvas.width;
-  this.y=Math.random()*canvas.height;
-  this.s=Math.random()*1+0.5;
-  this.r=Math.random()*Math.PI*2;
-  this.sy=Math.random()*1+0.5;
-  this.sx=Math.random()*0.6-0.3;
-}
-
-Sakura.prototype.draw=function(){
-  ctx.save();
-  ctx.translate(this.x,this.y);
-  ctx.rotate(this.r);
-  ctx.scale(this.s,this.s);
-  ctx.fillStyle="rgba(255,183,197,0.9)";
-  ctx.beginPath();
-  ctx.moveTo(0,0);
-  ctx.bezierCurveTo(10,-10,20,10,0,20);
-  ctx.bezierCurveTo(-20,10,-10,-10,0,0);
-  ctx.fill();
-  ctx.restore();
-};
-
-Sakura.prototype.update=function(){
-  this.y+=this.sy;
-  this.x+=this.sx;
-  this.r+=0.01;
-  if(this.y>canvas.height){
-    this.y=-20;
-    this.x=Math.random()*canvas.width;
+class Petal{
+  constructor(){ this.reset(); }
+  reset(){
+    this.x = Math.random()*canvas.width;
+    this.y = Math.random()*-canvas.height;
+    this.size = Math.random()*20 + 18;
+    this.speedY = Math.random()*1.2 + 0.6;
+    this.swing  = Math.random()*Math.PI*2;
+    this.spin   = Math.random()*0.02 - 0.01;
+    this.rot    = Math.random()*Math.PI*2;
   }
-};
-
-for(let i=0;i<sakuraNum;i++){
-  sakuraList.push(new Sakura());
+  update(){
+    this.swing += 0.02;
+    this.y += this.speedY;
+    this.x += Math.sin(this.swing) * 0.8;
+    this.rot += this.spin;
+    if(this.y > canvas.height + 40) this.reset();
+  }
+  draw(){
+    ctx.save();
+    ctx.translate(this.x,this.y);
+    ctx.rotate(this.rot);
+    ctx.globalAlpha = 0.9;
+    ctx.drawImage(petalImg,-this.size/2,-this.size/2,this.size,this.size);
+    ctx.restore();
+  }
 }
+
+petalImg.onload = ()=>{
+  for(let i=0;i<PETAL_COUNT;i++) petals.push(new Petal());
+  requestAnimationFrame(loop);
+};
 
 function loop(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  sakuraList.forEach(s=>{s.update();s.draw();});
+  petals.forEach(p=>{p.update();p.draw();});
   requestAnimationFrame(loop);
 }
-loop();
 
 /* ===============================
    ✨ CURSOR SPARKLES
@@ -264,7 +293,6 @@ function sparkle(x,y){
 document.addEventListener("mousemove",e=>{
   sparkle(e.clientX,e.clientY);
 });
-
 document.addEventListener("touchstart",e=>{
   sparkle(e.touches[0].clientX,e.touches[0].clientY);
 });
